# 2023_PNU_STUDY

./: README.md
AI Programming(2023fall)/: README.md
AI Programming(2023fall)/HW/PA 03/: first_choice_n.py  first_choice_tsp.py  steepest_ascent_n.py  steepest_ascent_tsp.py
AI Programming(2023fall)/HW/PA 04/: first_choice_n.ipynb  problem.py  (+4 more)
C++ Programming and Practice(2023spring)/: README.md
C++ Programming and Practice(2023spring)/Practice/실습 121 - 온라인 영화 예매 애플리케이션 구현/: 121.csv  121_202255513.hwp  AmountDiscountPolicy.cpp  AmountDiscountPolicy.h  CMakeLists.txt  Customer.h  DiscountCondition.h  DiscountPolicy.cpp  DiscountPolicy.h  Money.h  Movie.cpp  Movie.h  MovieTest.cpp  PercentDiscountPolicy.cpp  PercentDiscountPolicy.h  PeriodCondition.cpp  PeriodCondition.h  Reservation.cpp  Reservation.h  Screening.cpp  Screening.h  SequenceCondition.cpp  SequenceCondition.h
Computer Networks(2023fall)/: README.md
Data Communications(2023spring)/: README.md
Introduction to Data Science(2023spring)/: README.md
Introduction to Data Science(2023spring)/HW/: IDS23_HW03_solution.ipynb  IDS23_HW04_solution.ipynb  hw1_202255513_김대욱.ipynb  hw2_202255513_김대욱.ipynb  hw3_202255513_김대욱.ipynb  hw4_202255513_김대욱.ipynb
Introduction to Data Science(2023spring)/Midterm/: IDS2023_midterm_202255513_김대욱.ipynb
Introduction to Unix Programming(2023spring)/: README.md
Introduction to Unix Programming(2023spring)/Final/: final1.c  final1_202255513_김대욱.c  final2.c  final2_202255513_김대욱.c
System Software(2023spring)/: README.md
Web Application Programming(2023fall)/: README.md
(+473 files in other folders)
