cmake_minimum_required(VERSION 3.25)
project(_121_______)

set(CMAKE_CXX_STANDARD 17)

add_executable(_121_______ Screening.h Screening.cpp Movie.h Movie.cpp Money.h Reservation.h Reservation.cpp Customer.h DiscountPolicy.h DiscountPolicy.cpp AmountDiscountPolicy.h AmountDiscountPolicy.cpp DiscountCondition.h PeriodCondition.h PeriodCondition.cpp MovieTest.cpp PercentDiscountPolicy.cpp PercentDiscountPolicy.h SequenceCondition.cpp SequenceCondition.h)
